# desafioLS

./: .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
app/: permissions.py  settings.py  urls.py
appointments/: models.py  serializers.py  tests.py  urls.py  views.py
appointments/migrations/: 0001_initial.py
authorization/: urls.py
professionals/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
professionals/migrations/: 0001_initial.py  0002_professional_user.py  0003_alter_professional_user.py
